--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1116,10 +1116,10 @@ select {
       margin-top: .88rem;
   }
   .navbar-toggler {
-      border: 2px solid rgb(112, 16, 3);
+      border: 2px solid #e5e5dc;
   }
-  .navbar-toggler-icon {
-      background-color: rgb(112, 16, 3);
+  .navbar-toggler-icon {       
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(229, 229, 220,1), 0, 0, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")
   }
   #weight_message {
       font-size: 50%;
@@ -1150,6 +1150,14 @@ select {
   #detailed-anchor {
       margin-right: 0;
       margin-left: 2rem;
+  }
+  #add_favourites_message {
+      width: 100%;
+      font-size: 100%;
+      height: 5.5rem;
+  }
+  #add_favourites_message p {
+      padding: 1.75rem .2rem 0 .2rem;
   }
 }
 
@@ -1189,10 +1197,10 @@ select {
       margin-top: .88rem;
   }
   .navbar-toggler {
-      border: 2px solid rgb(112, 16, 3);
+      border: 2px solid #e5e5dc;
   }
-  .navbar-toggler-icon {
-      background-color: rgb(112, 16, 3);
+  .navbar-toggler-icon {       
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(229, 229, 220,1), 0, 0, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")
   }    
 }
 
@@ -1244,10 +1252,10 @@ select {
       margin-top: .88rem;
   }
   .navbar-toggler {
-      border: 2px solid rgb(112, 16, 3);
+      border: 2px solid #e5e5dc;
   }
-  .navbar-toggler-icon {
-      background-color: rgb(112, 16, 3);
+  .navbar-toggler-icon {       
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(229, 229, 220,1), 0, 0, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")
   }
   #weight_message {
       width: 45%;
