Changed background-color at burger menu button

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1116,7 +1116,8 @@ select {
       margin-top: .88rem;
   }
   .navbar-toggler {
-      border: 2px solid #e5e5dc;
+      border: 1.5px solid #e5e5dc;
+      background-color: rgb(112, 16, 3);
   }
   .navbar-toggler-icon {       
       background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(229, 229, 220,1), 0, 0, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")
@@ -1197,7 +1198,8 @@ select {
       margin-top: .88rem;
   }
   .navbar-toggler {
-      border: 2px solid #e5e5dc;
+      border: 1.5px solid #e5e5dc;
+      background-color: rgb(112, 16, 3);
   }
   .navbar-toggler-icon {       
       background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(229, 229, 220,1), 0, 0, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")
@@ -1252,7 +1254,8 @@ select {
       margin-top: .88rem;
   }
   .navbar-toggler {
-      border: 2px solid #e5e5dc;
+      border: 1.5px solid #e5e5dc;
+      background-color: rgb(112, 16, 3);
   }
   .navbar-toggler-icon {       
       background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(229, 229, 220,1), 0, 0, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")
