Removed class of 'profile':

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,7 +5,7 @@
             {% set numberRocky = users_rocky | int %}
             {% set numberGas = users_gas_giants | int %}
              {% set numberList = users_list | int %}
-			<div id="info" class="info">
+			<div id="info">
             <h4>{{ user }}'s Profile</h4>
              <hr class="guide-separator">
 				<p>{{ user }}, you currently have {{ users_list }} {% if numberList == 1 %}
