Added date picker at 'Discovery Date' input

--- a/templates/addExoplanet.html
+++ b/templates/addExoplanet.html
@@ -17,7 +17,7 @@
   </div>
 						<div class="form-group">
                         <label for="dicovery_date">Discovery Date:</label>
-							<input name="discovery_date" type="text" class="form-control input_planet" id="discovery_date" required>
+							<input name="discovery_date" type="date" class="form-control input_planet" id="discovery_date" required>
   </div>
 							<div class="form-group">
                             <label for="distance_from_earth">Distance From Earth (Light Years):</label>
