Gave class of 'about-paragraphs' to first 2 paragraphs at about page and set padding-bottom to 0

--- a/templates/about.html
+++ b/templates/about.html
@@ -21,11 +21,11 @@
 	<div id="about_text_container" class="row">
 		<div class="col-12">
 			<div id="about_text">
-				<p style="padding-bottom:0">Exoplanets are planets that orbit a star other than our sun. The prefix exo
+				<p class="about-paragraphs">Exoplanets are planets that orbit a star other than our sun. The prefix exo
 					comes from the Greek and means outside; these worlds are far, far outside our own solar system.
 					Astronomers have confirmed more than 4,000 exoplanets orbiting distant stars, with at least 1,000
 					more more awaiting confirmation.</p>
-				<p style="padding-bottom:0">
+				<p class="about-paragraphs">
 					Welcome to OTHER WORLDS - a site that offers you a biref guide to some of the most relevant
 					exoplanets discovered up to date. You will have your own list of favourite exoplanets
 					in which you can add any of the planets from our main list. If you can't find in our main list an
