--- a/templates/favourites.html
+++ b/templates/favourites.html
@@ -97,7 +97,7 @@
 							href="{{ url_for('delete_rocky', exoplanet_id=favourite_exoplanet._id)}}"><button class="favourites_display_buttons exoplanets_display_buttons buttons">Delete</button></a>
 						{% elif gas %}
 						<a
-							href="{{ url_for('delete_gas_giant', exoplanet_id=favourite_exoplanet._id)}}"><button class="favourites_display_buttons exoplanets_display_buttons buttons">Delete</button></a>
+							href="{{ url_for('delete_gas_exoplanet', exoplanet_id=favourite_exoplanet._id)}}"><button class="favourites_display_buttons exoplanets_display_buttons buttons">Delete</button></a>
 						{% else %}
 						<a
 							href="{{ url_for('delete_favourite', exoplanet_id=favourite_exoplanet._id)}}"><button class="favourites_display_buttons exoplanets_display_buttons buttons">Delete</button></a>
