--- a/templates/exoplanets.html
+++ b/templates/exoplanets.html
@@ -77,9 +77,9 @@
 					<p class="exoplanet_properties"><strong>Star System:</strong> {{exoplanet.star_system}} </p>
 					<hr class="separator">
 					<div class="centered_buttons">
-						<a href="{{ url_for('favourites', exoplanet_id=exoplanet._id)}}"
+						<a href="{{ url_for('favourite', exoplanet_id=exoplanet._id)}}"
 							id="margin-left"><button id="favourite_button" class="exoplanets_display_buttons buttons">Add Favourites</button></a>
-						<a href="{{ url_for('detailedExoplanet', exoplanet_id=exoplanet._id) }}"
+						<a href="{{ url_for('detailed_exoplanet', exoplanet_id=exoplanet._id) }}"
 							id="float_right"><button class="exoplanets_display_buttons buttons">Details</button></a>
 					</div>
 				</div>
