Changed the naming on some functions accordingly to the changes done in the app.py file

--- a/templates/addExoplanet.html
+++ b/templates/addExoplanet.html
@@ -76,7 +76,7 @@
 									aria-label="Jupiter mass as unit of measure">Jupiter mass (Mj)</a>. Please convert
 								into Earth
 								mass before inserting. Jupiter mass is <span id="jupiter-mass">318</span> times greater than Earth mass.
-								Please see <a href="{{ url_for('massPhoto') }}">here</a> the
+								Please see <a href="{{ url_for('mass_photo') }}">here</a> the
 								location for planet's mass when searching on Wikipedia.</p>
     </div>
     </div>
