--- a/templates/favourites.html
+++ b/templates/favourites.html
@@ -94,18 +94,18 @@
 					<div class="centered_buttons">
 						{% if rocky %}
 						<a
-							href="{{ url_for('delete_rocky', exoplanet_id=favourite_exoplanet._id)}}"><button class="favourites_display_buttons exoplanets_display_buttons buttons">Delete</button></a>
+							href="{{ url_for('delete_rocky', exoplanet_id=favourite_exoplanet._id)}}"><button class="favourites-display-buttons exoplanets_display_buttons buttons">Delete</button></a>
 						{% elif gas %}
 						<a
-							href="{{ url_for('delete_gas_exoplanet', exoplanet_id=favourite_exoplanet._id)}}"><button class="favourites_display_buttons exoplanets_display_buttons buttons">Delete</button></a>
+							href="{{ url_for('delete_gas_exoplanet', exoplanet_id=favourite_exoplanet._id)}}"><button class="favourites-display-buttons exoplanets_display_buttons buttons">Delete</button></a>
 						{% else %}
 						<a
-							href="{{ url_for('delete_favourite', exoplanet_id=favourite_exoplanet._id)}}"><button class="favourites_display_buttons exoplanets_display_buttons buttons">Delete</button></a>
+							href="{{ url_for('delete_favourite', exoplanet_id=favourite_exoplanet._id)}}"><button class="favourites-display-buttons exoplanets_display_buttons buttons">Delete</button></a>
 						{% endif %}
 						<a
-							href="{{ url_for('favouriteDetailed', exoplanet_id=favourite_exoplanet._id) }}"><button class="favourites_display_buttons exoplanets_display_buttons buttons">Details</button></a>
+							href="{{ url_for('favourite_detailed', exoplanet_id=favourite_exoplanet._id) }}"><button class="favourites-display-buttons exoplanets_display_buttons buttons">Details</button></a>
 						<a
-							href="{{ url_for('calculateWeight', exoplanet_mass=favourite_exoplanet.mass, exoplanet_name=favourite_exoplanet.planet_name, exoplanet_id=favourite_exoplanet._id) }}"><button class="favourites_display_buttons exoplanets_display_buttons buttons">calculate</button></a>
+							href="{{ url_for('calculate_weight', exoplanet_mass=favourite_exoplanet.mass, exoplanet_name=favourite_exoplanet.planet_name, exoplanet_id=favourite_exoplanet._id) }}"><button class="favourites-display-buttons exoplanets_display_buttons buttons">calculate</button></a>
 					</div>
 				</div>
 			</div>
