--- a/templates/detailedExoplanet.html
+++ b/templates/detailedExoplanet.html
@@ -32,7 +32,7 @@
 						href="{{ url_for('favourite', exoplanet_id=detailed_exoplanet._id)}}"
 						id="margin-left"><button class="buttons detailed-action">add favourites</button></a>
 					<a style="margin-right:2rem;"
-						href="{{ url_for('calculateWeight', exoplanet_mass=detailed_exoplanet.mass, exoplanet_name=detailed_exoplanet.planet_name, exoplanet_id=detailed_exoplanet._id) }}"
+						href="{{ url_for('calculate_weight', exoplanet_mass=detailed_exoplanet.mass, exoplanet_name=detailed_exoplanet.planet_name, exoplanet_id=detailed_exoplanet._id) }}"
 						id="margin-left"><button class="buttons detailed-action">calculate weight</button></a>
 				</div>
 			</div>
