--- a/templates/layout/scripts.html
+++ b/templates/layout/scripts.html
@@ -19,5 +19,8 @@
                 $('.register-form').addClass('reduce-margin');
                 $('.user-info').addClass('smaller-margin');
             }
+                $('.navbar-toggler').click(function(){
+                $('#nav').addClass('navbar-down');
+            })
         });
 </script>
