--- a/templates/layout/scripts.html
+++ b/templates/layout/scripts.html
@@ -20,7 +20,7 @@
                 $('.user-info').addClass('smaller-margin');
             }
                 $('.navbar-toggler').click(function(){
-                $('#nav').addClass('navbar-down');
+                $('#nav').toggleClass('navbar-down');
             })
         });
 </script>
