--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,7 @@
             </div>
 		</div>
 	</div>
-	<div class="row main-action">
+	<div id="about-action" class="row main-action">
 		<div class="col-6 main_action_buttons">
 			<a href="{{ url_for('exoplanets_display') }}"><button class="top_buttons buttons">main list</button></a>
 		</div>
@@ -25,14 +25,14 @@
 					comes from the Greek and means outside; these worlds are far, far outside our own solar system.
 					Astronomers have confirmed more than 4,000 exoplanets orbiting distant stars, with at least 1,000
 					more more awaiting confirmation.</p>
-				<p class="about-paragraphs">
+				<p id="about-second-paragraph" class="about-paragraphs">
 					Welcome to OTHER WORLDS - a site that offers you a biref guide to some of the most relevant
 					exoplanets discovered up to date. You will have your own list of favourite exoplanets
 					in which you can add any of the planets from our main list. If you can't find in our main list an
 					exoplanet that you would like to add to your Favourites List, not a problem. You can add any
 					exoplanet
 					that you prefer to your Favourites List by simply entering its details into the form provided.</p>
-				<p>Contrary to what's depicting in most SCI FI movies, a fun fact about going to other planets is that
+				<p id="about-third-paragraph" class="about-paragraphs">Contrary to what's depicting in most SCI FI movies, a fun fact about going to other planets is that
 					your weight differs from that of on Earth due to their different gravity attraction. This site also
 					gives you the opportunity to quickly find out your weight on each of your favourite exoplanet.
 					Enjoy your trip to other worlds!</p>
