--- a/templates/calculateWeight.html
+++ b/templates/calculateWeight.html
@@ -11,7 +11,7 @@
 			<form action="{{ url_for('calculate_weight', exoplanet_mass=exoplanet.mass, exoplanet_name=exoplanet.planet_name, exoplanet_id=exoplanet._id) }}" method="POST">
 				<div class="form-group">
 					<label style="text-transform:capitalize" for="your_weight">please enter your weight in kg</label>
-					<input name="your_weight" type="text" class="form-control" id="your_weight">
+					<input name="your_weight" type="text" class="form-control" id="your_weight" pattern="[0-9]{1,5}" required>
                 </div>
 					<button id="calculate_action_button" type="submit" class="btn btn-primary buttons">calculate</button>
 			</form>
