--- a/templates/detailedExoplanet.html
+++ b/templates/detailedExoplanet.html
@@ -30,10 +30,10 @@
 				<div style="padding-bottom:1.5rem">
 					<a id="detailed-anchor"
 						href="{{ url_for('favourite', exoplanet_id=detailed_exoplanet._id)}}"
-						id="margin-left"><button class="buttons detailed-action">add favourites</button></a>
+						><button class="buttons detailed-action">add favourites</button></a>
 					<a style="margin-right:2rem;"
 						href="{{ url_for('calculate_weight', exoplanet_mass=detailed_exoplanet.mass, exoplanet_name=detailed_exoplanet.planet_name, exoplanet_id=detailed_exoplanet._id) }}"
-						id="margin-left"><button class="buttons detailed-action">calculate weight</button></a>
+						><button class="buttons detailed-action">calculate weight</button></a>
 				</div>
 			</div>
 		</div>
