Changing jquery with css method for .user-info

--- a/templates/layout/scripts.html
+++ b/templates/layout/scripts.html
@@ -17,7 +17,7 @@
             if ($('#registration-message-container').length) {
                 $('.margin').addClass('no-margin');
                 $('.register-form').addClass('reduce-margin');
-                $('.user-info').addClass('smaller-margin');
+                $('.user-info').css('margin-top', '10%');
             }
                 $('.navbar-toggler').click(function(){
                 $('#nav').toggleClass('navbar-down');
