Corrected typo at 'distance_from_earth' id

--- a/templates/addExoplanet.html
+++ b/templates/addExoplanet.html
@@ -16,7 +16,7 @@
 						<input name="planet_name" type="text" class="form-control input_planet" id="planet_name" required>
   </div>
 						<div class="form-group">
-                        <label for="dicovery_date">Discovery Date:</label>
+                        <label for="discovery_date">Discovery Date:</label>
 							<input name="discovery_date" type="date" class="form-control input_planet" id="discovery_date" required>
   </div>
 							<div class="form-group">
