--- a/templates/notAdded.html
+++ b/templates/notAdded.html
@@ -6,8 +6,8 @@
 			<div style="text-align:center">
 				<p id="not_added_message" class="message">{{ detailed_exoplanet.planet_name }} is not added to your Favourites list.<br>Please add it to your list and then calculate your weight on the surface of this {{ detailed_exoplanet.type }} planet.</p>
                 <div style="margin-top: 4rem;">
-                <a href="{{ url_for('detailedExoplanet', exoplanet_id=detailed_exoplanet._id) }}"><button class="action_buttons buttons">back</button></a>
-                <a href="{{ url_for('favourites', exoplanet_id=detailed_exoplanet._id)}}"><button class="action_buttons buttons">add favourites</button></a>
+                <a href="{{ url_for('detailed_exoplanet', exoplanet_id=detailed_exoplanet._id) }}"><button class="action_buttons buttons">back</button></a>
+                <a href="{{ url_for('favourite', exoplanet_id=detailed_exoplanet._id)}}"><button class="action_buttons buttons">add favourites</button></a>
                 </div>
 			</div>
 		</div>
