Removed all style attributes, gave id's and style all of them

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="main_container container">
-	<div style="margin-top:5rem" class="row">
+	<div id="about-container" class="row">
 		<div id="exoplanet_page_title_container" class="col-12">
 			<h1 class="top-titles">about</h1>
             <div>
@@ -18,7 +18,7 @@
 			<a href="{{ url_for('favourite_list') }}"><button class="top_buttons buttons">favourites</button></a>
 		</div>
 	</div>
-	<div id="about_text_container" class="row">
+	<div id="about-text-container" class="row">
 		<div class="col-12">
 			<div id="about_text">
 				<p class="about-paragraphs">Exoplanets are planets that orbit a star other than our sun. The prefix exo
