--- a/templates/alreadyFavourite.html
+++ b/templates/alreadyFavourite.html
@@ -3,9 +3,9 @@
 <div id="message_container" class="container">
 	<div id="exoplanets_title" class="row">
 		<div class="col-12">
-			<div style="text-align:center">
+			<div id="already-fav">
 				<p class="message">you have already added {{ favourite.planet_name }} to your favourites list.</p>
-                <div style="margin-top: 4rem;">
+                <div id="message-buttons">
                 <a href="{{ url_for('exoplanets_display') }}"><button class="action_buttons buttons">back</button></a>
                 <a href="{{ url_for('favourite_list') }}"><button class="action_buttons buttons">favourites</button></a>
                 </div>
