--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 	{% with messages = get_flashed_messages() %}
 	{% if messages %}
 	{% for message in messages %}
-	<div style="max-width: 100vw;" class="row">
+	<div id="registration" class="row">
 		<div id="registration-message-container" class="col-12">
 			<div>
 				{{ message }}
