--- a/templates/exoplanetWeight.html
+++ b/templates/exoplanetWeight.html
@@ -9,8 +9,8 @@
         </div>
 		</div>
 	</div>
-    <div style="margin-top:5rem" class="row">
-    <div id="weight_buttons_container" class="col-12">
+    <div id="row-weight-buttons" class="row">
+    <div id="weight-buttons-container" class="col-12">
     <a
 				href="{{ url_for('calculate_weight', exoplanet_mass=exoplanet.mass, exoplanet_name=exoplanet.planet_name, exoplanet_id=exoplanet._id) }}"><button class="weight_buttons buttons">again</button></a>
     
