--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block content %}
 <div class="container">
 <div class="row register-form">
-<div style="text-align:center;" class="col-12">
+<div id="login-center" class="col-12">
 {% if login %}
 <h1 class="top-titles login-title">Log In</h1>
 {% else %}
