--- a/static/css/style.css
+++ b/static/css/style.css
@@ -203,6 +203,10 @@ body {
 
 /* flash message starts here */
 
+#registration {
+    max-width: 100vw;
+}
+
 #registration-message-container {
   margin-top: 5rem;
   padding: 0;
@@ -458,6 +462,11 @@ body {
 
 #exoplanet_page_title_container {
   text-align: center;
+  margin-top: 5rem;
+}
+
+#about-container {
+    margin-top:5rem
 }
 
 #quote {
@@ -470,7 +479,7 @@ body {
   letter-spacing: 0.1rem;
 }
 
-#about_text_container {
+#about-text-container {
   margin-top: 2rem;
   margin-bottom: 8%;
 }
@@ -496,6 +505,10 @@ body {
 
 .reduce-margin {
   margin-top: 4rem;
+}
+
+#login-center {
+    text-align: center;
 }
 
 .login-title {
@@ -603,6 +616,14 @@ body {
   margin-top: 20%;
 }
 
+#already-fav {
+      text-align: center;
+  }
+
+  #message-buttons {
+      margin-top: 4rem;
+  }
+
 .message {
   background-color: rgba(112, 16, 3, 0.8);
   width: 51.5rem;
@@ -624,7 +645,11 @@ body {
 
 /* not_added.html page starts here */
 
-#not_added_message {
+#not-added-container {
+    text-align: center;
+}
+
+#not-added-container p {
   height: 7.5rem;
   text-transform: none;
 }
@@ -684,6 +709,10 @@ body {
   margin: 1.5rem 0 4rem 0;
 }
 
+#first-p-detailed {
+    padding-top: 2rem
+}
+
 #name_paragraph {
   padding-top: 2rem;
 }
@@ -716,7 +745,20 @@ body {
   padding-bottom: 1.5rem;
 }
 
-#detailed-anchor {
+#detailed-anchor-container {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+    background-color: rgba(112, 16, 3, 0.8);
+    font-size: 130%;
+    width: 75%;
+    margin: 0 auto;
+}
+
+#first-a-detailed {
+    margin-right: 2rem;
+}
+
+#second-a-detailed {
     margin-right: 2rem;
 }
 
@@ -774,7 +816,11 @@ body {
   animation-fill-mode: forwards;
 }
 
-#weight_buttons_container {
+#row-weight-buttons {
+    margin-top: 5rem;
+}
+
+#weight-buttons-container {
   text-align: center;
 }
 
@@ -1196,6 +1242,9 @@ select {
       margin: .2rem;
       width: 9.4rem;
   }
+  #exoplanet_page_title_container {
+      margin-top: 1rem;
+  }
   .message {
       width: 100%;
       font-size: 80%;
@@ -1214,7 +1263,7 @@ select {
       height: 2rem;
       font-size: 85%;
   }
-  #detailed-anchor {
+  #first-a-detailed {
       margin-right: 0;
       margin-left: 2rem;
   }
@@ -1268,6 +1317,9 @@ select {
 @media (min-width: 577px) and (max-width: 767px) {
    body {
     background-size: cover;
+  }
+  #exoplanet_page_title_container {
+      margin-top: 1rem;
   }
   .top_buttons {
     width: 10rem;
@@ -1334,11 +1386,34 @@ select {
   #login-container {
     width: 70%;
   }
+  .message {
+      width: auto;
+  }
   .user-info {
     margin-top: 39%;
   }
   #info {
     width: 80%;
+  }
+  #exoplanet_page_title_container {
+      margin-top: 1rem;
+  }
+  #about-action {
+      margin-top: .5rem;
+  }
+  #about-text-container {
+      margin-bottom: 0;
+  }
+  #about_text {
+      width: 90%;
+  }
+  .about-paragraphs {
+      margin-bottom: 0;
+      padding: 1.8rem;
+      padding-bottom: 0;
+  }
+  #about-third-paragraph {
+      padding-bottom: 1.5rem
   }
   #title_area {
     bottom: 39%;
@@ -1347,12 +1422,10 @@ select {
   #profile-actions  {
       width: 80%;
   }
-  #form_container {
-      padding: 2rem 1rem;
-  }
    #form_container {
        width: 90%;
        margin-top: 5%;
+       padding: 2rem 1rem;
    }
    .form-container {
        margin-top: 15%;
@@ -1374,6 +1447,7 @@ select {
   #navbarNav {
       margin-top: .88rem;
   }
+  
   
   #weight_message {
       width: 45%;
@@ -1432,6 +1506,9 @@ select {
   }
   #form_row {
     margin-top: 3rem;
+  }
+  .detailed {
+      height: 51vh;
   }
   #notes-message div {
     font-size: 105%;
