--- a/templates/detailedExoplanet.html
+++ b/templates/detailedExoplanet.html
@@ -15,7 +15,7 @@
 	<div id="detailed_container" class="row">
 		<div class="col-12 properties_container">
 			<div id="detailed_properties" class="detailed">
-				<p style="padding-top:2rem;">Name: {{ detailed_exoplanet.planet_name }}</p>
+				<p id="first-p-detailed">Name: {{ detailed_exoplanet.planet_name }}</p>
 				<hr class="detailed_separator">
 				<p>Discovery date: {{ detailed_exoplanet.discovery_date }}</p>
 				<hr class="detailed_separator">
@@ -27,15 +27,16 @@
 				<hr class="detailed_separator">
 				<p>Mass: {{ detailed_exoplanet.mass }} Earth mass</p>
 				<hr class="detailed_separator">
-				<div style="padding-bottom:1.5rem">
-					<a id="detailed-anchor"
+                </div>
+				<div id="detailed-anchor-container">
+					<a id="#first-a-detailed"
 						href="{{ url_for('favourite', exoplanet_id=detailed_exoplanet._id)}}"
 						><button class="buttons detailed-action">add favourites</button></a>
-					<a style="margin-right:2rem;"
+					<a id="second-a-detailed"
 						href="{{ url_for('calculate_weight', exoplanet_mass=detailed_exoplanet.mass, exoplanet_name=detailed_exoplanet.planet_name, exoplanet_id=detailed_exoplanet._id) }}"
 						><button class="buttons detailed-action">calculate weight</button></a>
 				</div>
-			</div>
+			
 		</div>
 	</div>
 </div>
