--- a/templates/favourites.html
+++ b/templates/favourites.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-<div style="margin-top:5rem" class="container">
+<div class="container">
 	{% if rocky %}
-	<div class="row">
+	<div class="row margin">
 		<div class="col-12 exoplanet_page_title_container">
 			<h1 class="top-titles">favourite rocky worlds</h1>
 		</div>
@@ -19,7 +19,7 @@
 		</div>
 	</div>
 	{% elif gas %}
-	<div class="row">
+	<div class="row margin">
 		<div class="col-12 exoplanet_page_title_container">
 			<h1 class="top-titles">favourite gas giants</h1>
 		</div>
@@ -36,7 +36,7 @@
 		</div>
 	</div>
 	{% else %}
-	<div class="row">
+	<div class="row margin">
 		<div class="col-12 exoplanet_page_title_container">
 			<h1 class="top-titles">My Favourites</h1>
 		</div>
@@ -58,7 +58,7 @@
 			</a>
 		</div>
 		<div class="col-3 dropdown">
-			<button style="padding-top:.1rem" class="dropdown-toggle top_buttons buttons" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			<button class="dropdown-toggle top_buttons buttons" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
        sort by size
       </button>
 			<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
