--- a/templates/about.html
+++ b/templates/about.html
@@ -21,7 +21,7 @@
 	<div id="about-text-container" class="row">
 		<div class="col-12">
 			<div id="about_text">
-				<p class="about-paragraphs">Exoplanets are planets that orbit a star other than our sun. The prefix exo
+				<p id="about-first-paragraph" class="about-paragraphs">Exoplanets are planets that orbit a star other than our sun. The prefix exo
 					comes from the Greek and means outside; these worlds are far, far outside our own solar system.
 					Astronomers have confirmed more than 4,000 exoplanets orbiting distant stars, with at least 1,000
 					more more awaiting confirmation.</p>
