--- a/templates/addExoplanet.html
+++ b/templates/addExoplanet.html
@@ -3,7 +3,7 @@
 <div id="main" class="div"></div>
 <div class="container form-container">
 	<div class="row">
-		<div id="exoplanet_page_title_container" class="col-12">
+		<div id="add-container" class="col-12">
 			<h1 class="top-titles">add exoplanet</h1>
 		</div>
 	</div>
